dev/non_executable_reasons_record_from_random_10k/6584.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%file helloworld.c
#include <stdio.h>

int main(int argc, char** argv)
{
    printf("Hello world!\n");
    return 0;
}
------------------

[0;36m  File [0;32m"<ipython-input-1-cdc512611b98>"[0;36m, line [0;32m3[0m
[0;31m    %%file helloworld.c[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-cdc512611b98>, line 3)

Executability                            : False
